--- a/src/app/feed/feed.component.scss
+++ b/src/app/feed/feed.component.scss
@@ -1,6 +1,6 @@
 .grid-container {
   margin: 20px;
-  max-width: 1080px;
+  max-width: 1380px;
   margin-left: auto;
   margin-right: auto;
   box-sizing: border-box;
@@ -14,6 +14,10 @@
   bottom: 15px;
   border-radius: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.mat-card:first-of-type {
+  font-size: 30px;
 }
 
 .more-button {
@@ -60,4 +64,20 @@
 .buscar {
   margin: 15px 5% 0 5%;
   width: 90%;
+}
+
+.mat-card-tile {
+  color: red;
+}
+
+.titulotab {
+  padding-top: 20px;
+}
+
+.tabtitle {
+  font-size: 20px;
+}
+
+.mat-tab-header {
+  font-size: 40px;
 }
