--- a/src/app/criticas/criticas/criticas.component.html
+++ b/src/app/criticas/criticas/criticas.component.html
@@ -20,7 +20,7 @@
         <mat-card-content class="dashboard-card-content">
           <div>{{resultado.conteudo}}</div>
         </mat-card-content>
-        <button mat-raised-button color="primary" (click)="abrirDialogoCriticas(resultado.titulo)">
+        <button matTooltip="Clique aqui para receber mais informações de críticas" mat-raised-button color="primary" (click)="abrirDialogoCriticas(resultado.titulo)">
           Mais informações
         <mat-icon>info</mat-icon>
         </button>
